[package]
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"
name = "evil_url"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
phf = {version = "0.8.0", features = ["macros"]}
